--- a/ml_model/stock-prediction-pytorch copy.ipynb
+++ b/ml_model/stock-prediction-pytorch copy.ipynb
@@ -52,7 +52,7 @@
    "source": [
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
+    "import seaborn as sns\n"
    ]
   },
   {
